<resources>
    <string name="app_name">Heady Project</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Heady Project</string>
    <string name="nav_header_subtitle">Developer Francis Reddy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="prices">Prices</string>
    <string name="filter">Filter</string>
    <string name="most_viewed_products">Most Viewed Products</string>
    <string name="most_ordered_products">Most Ordered Products</string>
    <string name="most_shared_products">Most Shared Products</string>
    <string name="cancel">Cancel</string>
    <string name="not_available">Not Available</string>
</resources>
