<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/color"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prices"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_color"
            app:layout_constraintEnd_toStartOf="@+id/tv_size"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_color" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/size"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_price" />

        <TextView
            android:id="@+id/tv_color_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/color"
            android:textColor="@color/colorGery"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_color"
            app:layout_constraintStart_toStartOf="@+id/tv_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_color" />

        <TextView
            android:id="@+id/tv_price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prices"
            android:textColor="@color/colorGery"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <TextView
            android:id="@+id/tv_size_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/size"
            android:textColor="@color/colorGery"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_size"
            app:layout_constraintStart_toStartOf="@+id/tv_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_size" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

